# Gross-Calculation

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  tailwind.config.js
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  routes_ai.py  routes_health.py  routes_margins.py  routes_upload.py
backend/app/core/: config.py  security.py
backend/app/db/: oracle.py
backend/app/models/: __init__.py  ai.py  margin.py  upload.py
backend/app/rag/: __init__.py  vanna_config.yaml
backend/app/rag/training/: __init__.py
backend/app/rag/training/examples/: __init__.py  advanced_queries.yaml  basic_queries.yaml  error_examples.yaml
backend/app/rag/training/schema_docs/: __init__.py  employee_table.md  gross_margin_view.md  project_table.md  timecard_table.md
backend/app/services/: __init__.py  ai_service.py  cleaning_service.py  load_service.py  margin_service.py
database/: data_contract.md  functions.sql  schema.sql  seed_sample_data.sql
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: DataQualityReport.tsx  FileDrop.tsx  Layout.tsx  MarginChart.tsx  Navbar.tsx  Table.tsx
frontend/src/pages/: AskAIPage.tsx  DashboardPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
ops/: Makefile
ops/compose/: docker-compose.yml
ops/docker/: backend.Dockerfile  frontend.Dockerfile
